merged files from fabian and cedrics workflows and added calendar styling.